<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_news_feed"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csahmad.moodcloud.ViewPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark"
        android:layout_alignBottom="@+id/toolbar2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/moodImage"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar2"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:srcCompat="@drawable/happy" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/textText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Date"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Location"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/contextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/locationText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Context"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/button" />

    <TextView
        android:id="@+id/triggerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contextText"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="Trigger"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_toStartOf="@+id/deleteButton" />

    <ImageView
        android:id="@+id/triggerImage"
        android:layout_width="@android:dimen/notification_large_icon_height"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/triggerText"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/moodImage"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/moodImage"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Button" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Button" />

</RelativeLayout>