<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_following"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csahmad.moodcloud.FollowRequestActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />



    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="48dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Follow Requests"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark"
        android:layout_above="@+id/followerList"
        android:layout_centerHorizontal="true" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/followerList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar2">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>