...
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profilePostList"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profilePictureView">

    </android.support.v7.widget.RecyclerView>
...
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:tint="@android:color/background_light"
        app:srcCompat="@android:drawable/ic_input_add" />

    <Button
        android:id="@+id/followeditbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="Button"
        android:layout_alignTop="@+id/profileName"
...
