...


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/body"
        android:layout_centerHorizontal="true"
        android:text="Post"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
...
        android:textSize="20sp"
        android:layout_below="@+id/group"
        android:layout_toEndOf="@+id/crowd_image"
        android:text="With a Crowd"/>

    <Button
        android:id="@+id/postButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="Post"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
...
